[build-dependencies.tauri-build]
features = [
    "config-toml"
]
version = "2"

[dependencies]
serde_json = "1"

[dependencies.ms0503-dev-db]
default-features = false
path = "../ms0503-dev-db"

[dependencies.serde]
features = [
    "derive"
]
version = "1"

[dependencies.tauri]
features = [
    "config-toml"
]
version = "2"

[dependencies.tauri-plugin-http]
features = [
    "json"
]
version = "2"

[lib]
crate-type = [
    "cdylib",
    "rlib",
    "staticlib"
]
name = "ms0503_dev_editor_lib"

[package]
authors = [
    "Sora Tonami <ms0503@outlook.com>"
]
edition = "2024"
name = "ms0503-dev-editor"
resolver = "3"
version = "0.1.0"
