[build-dependencies.tauri-build]
features = []
version = "2"

[dependencies]
serde_json = "1"
tauri-plugin-opener = "2"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tauri]
features = []
version = "2"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "ms0503_dev_editor_lib"

[package]
authors = ["Sora Tonami <ms0503@outlook.com>"]
edition = "2024"
name = "ms0503-dev-editor"
version = "0.1.0"
